--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@angular/common": "^14.1.0",
     "@angular/compiler": "^14.1.0",
     "@angular/core": "^14.1.0",
+    "@angular/fire": "^7.4.1",
     "@angular/forms": "^14.1.0",
     "@angular/localize": "^14.1.0",
     "@angular/material": "^14.2.2",
@@ -25,6 +26,7 @@
     "@popperjs/core": "^2.10.2",
     "angular-material": "^1.2.5",
     "bootstrap": "^5.2.1",
+    "firebase": "^9.10.0",
     "ngx-bootstrap": "^9.0.0",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
