--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
     "lint:fix": "npm run lint -- --fix",
     "start:electron": "ng build --base-href ./ && electron .",
     "build:electron": "ng build && electron-packager . --asar --ignore=/node_modules --ignore=/e2e --ignore=/src --overwrite --out=./build"
-
   },
   "private": true,
   "dependencies": {
@@ -31,6 +30,7 @@
     "@popperjs/core": "^2.10.2",
     "angular-material": "^1.2.5",
     "bootstrap": "^5.2.1",
+    "electron-builder": "^23.3.3",
     "firebase": "^9.10.0",
     "ngx-bootstrap": "^9.0.0",
     "rxjs": "~7.5.0",
@@ -51,5 +51,9 @@
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.0.0",
     "typescript": "~4.7.2"
+  },
+  "portable": {
+    "unicode": false,
+    "artifactName": "friendly_chat.exe"
   }
 }
